--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.22.0",
+    "@google/generative-ai": "^0.24.1",
     "@vercel/node": "^5.3.26",
     "d3": "^7.9.0",
     "lucide-react": "^0.545.0",
